--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "env-cmd": "^10.1.0",
+    "leaflet": "^1.9.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.4.0"
   },
   "scripts": {
     "start": "env-cmd -f .env react-scripts start",
